--- a/Assets/.gitattributes
+++ b/Assets/.gitattributes
@@ -23,7 +23,7 @@
 
 # Unity LFS
 *.cubemap            binary
-*.unitypackage       filter=lfs diff=lfs merge=lfs -text
+*.unitypackage       binary
 
 # 3D models
 *.3dm                binary
@@ -34,7 +34,7 @@
 *.dae                binary
 *.dxf                binary
 *.FBX                binary
-*.fbx                filter=lfs diff=lfs merge=lfs -text
+*.fbx                binary
 *.jas                binary
 *.lws                binary
 *.lxo                binary
@@ -90,7 +90,7 @@
 *.gz                binary
 *.rar               binary
 *.tar               binary
-*.zip               filter=lfs diff=lfs merge=lfs -text
+*.zip               binary
 
 # Compiled Dynamic Library
 *.dll               binary
